install sbt redis mongo